yaml/0.2.0/mailu/mailu/templates/admin.yaml
---
# Source: mailu/templates/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-admin
  labels:
    app: mailu
    component: admin
spec:
  selector:
    app: mailu
    component: admin
  ports:
  - name: http
    port: 80
    protocol: TCP
---
# Source: mailu/templates/admin.yaml
# This file is derived from https://github.com/Mailu/Mailu/blob/master/docs/kubernetes/mailu/admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-admin
spec:
  selector:
    matchLabels:
      app: mailu
      component: admin
  replicas: 1
  template:
    metadata:
      labels:
        app: mailu
        component: admin
    spec:
      containers:
      - name: admin
        image: mailu/admin:master
        imagePullPolicy: Always
        volumeMounts:
          - name: data
            subPath: admin
            mountPath: /data
          - name: data
            mountPath: /dkim
            subPath: dkim
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /ui/login
            port: http
          periodSeconds: 10
          failureThreshold: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ui/login
            port: http
          periodSeconds: 10
          failureThreshold: 1
          timeoutSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mailu-storage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
