yaml/0.2.0/mailu/mailu/templates/front.yaml
---
# Source: mailu/templates/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-front
  labels:
    app: mailu
    component: front
spec:
  selector:
    app: mailu
    component: front
  ports:
    - name: pop3
      port: 110
      protocol: TCP
    - name: pop3s
      port: 995
      protocol: TCP
    - name: imap
      port: 143
      protocol: TCP
    - name: imaps
      port: 993
      protocol: TCP
    - name: smtp
      port: 25
      protocol: TCP
    - name: smtps
      port: 465
      protocol: TCP
    - name: smtpd
      port: 587
      protocol: TCP
    - name: smtp-auth
      port: 10025
      protocol: TCP
    - name: imap-auth
      port: 10143
      protocol: TCP
    - name: http
      port: 80
      protocol: TCP
---
# Source: mailu/templates/front.yaml
# This file is derived from https://github.com/Mailu/Mailu/blob/master/docs/kubernetes/mailu/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-front
spec:
  selector:
    matchLabels:
      app: mailu
      component: front
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mailu
        component: front
    spec:
      containers:
      - name: front
        image: mailu/nginx:master
        imagePullPolicy: Always
        volumeMounts:
          - name: certs
            mountPath: /certs
        ports:
          - name: pop3
            containerPort: 110
            hostPort: 110
            protocol: TCP
          - name: pop3s
            containerPort: 995
            hostPort: 995
            protocol: TCP
          - name: imap
            containerPort: 143
            hostPort: 143
            protocol: TCP
          - name: imaps
            containerPort: 993
            hostPort: 993
            protocol: TCP
          - name: smtp
            containerPort: 25
            hostPort: 25
            protocol: TCP
          - name: smtps
            containerPort: 465
            hostPort: 465
            protocol: TCP
          - name: smtp-auth
            containerPort: 10025
            protocol: TCP
          - name: imap-auth
            containerPort: 10143
            protocol: TCP
          - name: smtpd
            containerPort: 587
            hostPort: 587
            protocol: TCP
          - name: auth
            containerPort: 8000
            protocol: TCP
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
          failureThreshold: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
          failureThreshold: 1
          timeoutSeconds: 5
      volumes:
        - name: certs
          secret:
            items:
              - key: tls.crt
                path: cert.pem
              - key: tls.key
                path: key.pem
            secretName: mailu-certificates
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
