yaml/0.2.0/mailu/mailu/templates/postfix.yaml
---
# Source: mailu/templates/postfix.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-postfix
  labels:
    app: mailu
    component: postfix
spec:
  selector:
    app: mailu
    component: postfix
  ports:
  - name: smtp
    port: 25
    protocol: TCP
  - name: smtp-ssl
    port: 465
    protocol: TCP
  - name: smtp-starttls
    port: 587
    protocol: TCP
  - name: smtp-auth
    port: 10025
    protocol: TCP
---
# Source: mailu/templates/postfix.yaml
# This file is derived from https://github.com/Mailu/Mailu/blob/master/docs/kubernetes/mailu/admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-postfix
spec:
  selector:
    matchLabels:
      app: mailu
      component: postfix
  replicas: 1
  template:
    metadata:
      labels:
        app: mailu
        component: postfix
    spec:
      containers:
      - name: postfix
        image: mailu/postfix:master
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /queue
            name: data
            subPath: mailqueue
        ports:
          - name: smtp
            containerPort: 25
            protocol: TCP
          - name: smtp-ssl
            containerPort: 465
            protocol: TCP
          - name: smtp-starttls
            containerPort: 587
            protocol: TCP
          - name: smtp-auth
            containerPort: 10025
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        livenessProbe:
          exec:
            command:
              - sh
              - -c
              - 'echo QUIT|nc localhost 25|grep "220 .* ESMTP ready"'
          periodSeconds: 10
          failureThreshold: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - 'echo QUIT|nc localhost 25|grep "220 .* ESMTP ready"'
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mailu-storage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
